# v8Inspector

./: .gitmodules  CMakeLists.txt
include/v8Inspector/: Inspector.h
src/: Inspector.cpp  SafeQueue.h  utils.h  v8inspector_channel.cpp  v8inspector_channel.h  v8inspector_client.cpp  v8inspector_client.h
